<resources>
    <string name="app_name">ParcialGrupo3Whale</string>
    <string name="hello_blank_fragment">/hello_blank_fragment</string>
    <string name="hint_WeighPet">Peso</string>
    <string name="hint_DescriptionPet">Descripción</string>
    <string name="hint_namePet">Nombre de mascota</string>
    <string name="hint_age">Edad</string>
    <string name="addAdoptionPet">Publicar adopción</string>
    <string name="select_location">Ubicación</string>
    <string name="location_label">Location</string>
    <string name="male">Macho</string>
    <string name="female">Hembra</string>
    <string name="puppy">Cachorro</string>
    <string name="adult">Perro Adulto</string>

    <!-- fragment_profile -->
    <string name="profile">Perfil</string>
    <string name="uploadPhoto">Subir Foto</string>

    <!-- activity_welcome -->
    <string name="img_welcome">Perro de bienvenida</string>
    <string name="txtView_welcome">Bienvenido! Para continuar, por favor ingrese su nombre</string>
    <string name="txtEdit_welcome">Ingrese su nombre</string>
    <string name="txt_adoption">Adopción de Perritos</string>
    <string name="btn_welcome">Ingresar</string>
    <string name="pet_owner">Dueño</string>
    <string name="adopt">Adoptar</string>
    <string name="weight">Peso</string>

    <!-- activity_main -->
    <string name="nav_home">Home</string>
    <string name="nav_favourite">Favourites</string>
    <string name="nav_adoptions">Adoptions</string>
    <string name="nav_adoption_form">Adoption Form</string>

    <!-- Drawer Menu -->
    <string name="nav_drawer_open">Abrir Menú</string>
    <string name="nav_drawer_close">Cerrar Menú</string>

    <!-- fragment_setting -->
    <string name="drawer_configuration">Configuración</string>
    <string name="drawer_welcome">Hola</string>
    <string name="welcome_splash">Cargando...</string>
    <string name="help_text">Ingrese la información de la mascota para crear la publicación de adopción.</string>
    <string name="hint_breed">Raza</string>
    <string name="hint_subBreed">Subraza</string>

    <!-- Preference Titles -->
    <string name="config_tittle">Configuración</string>
    <string name="config_general">Generales</string>

    <!-- fragment_home -->
    <string name="search_hint">Buscador</string>
    <string name="filter_text_home">Filtros</string>
    <string name="filter_salchicha">Salchicha</string>
    <string name="filter_golden">Golden</string>
    <string name="filter_terrier">Terrier</string>
    <string name="text_filtros">Filtros</string>
    <string name="text_mas_filtros">Más Filtros</string>

</resources>