<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome_dog_image"
            android:contentDescription="@string/img_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="120dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtView_welcome"
            android:textSize="16sp"
            android:textAlignment="center"
            android:padding="16dp"
            android:fontFamily="@font/poppins_thin"
            android:textColor="@color/Welcome_title"
            android:id="@+id/textView3"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

    <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtEdit_welcome"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:fontFamily="@font/poppins_thin"
            android:textColor="@color/Welcome_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0" />

    <Button
            android:id="@+id/btnEnterApp"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_welcome"
            android:padding="16dp"
            android:fontFamily="@font/poppins_thin"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="124dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="123dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.322" />

</androidx.constraintlayout.widget.ConstraintLayout>