<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/homeFragment"
        android:layout_width="match_parent"
        android:layout_height="750dp"
        tools:context=".fragments.HomeFragment">

    <!-- SearchView -->
    <androidx.appcompat.widget.SearchView
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:iconifiedByDefault="false"
            app:queryHint="Buscar"
            app:searchIcon="@drawable/ic_search"
            android:background="@drawable/search_bkg" />

    <TextView
            android:id="@+id/textViewFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_filtros"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar"/>

    <FrameLayout
            android:id="@+id/frameLayoutChips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewFilters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupFilters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:singleLine="true"
                app:singleSelection="true"
                app:chipSpacingHorizontal="50dp">

            <com.google.android.material.chip.Chip
                    android:id="@+id/chip_golden"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_golden" />

            <com.google.android.material.chip.Chip
                    android:id="@+id/chip_salchicha"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_salchicha" />

            <com.google.android.material.chip.Chip
                    android:id="@+id/chip_terrier"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_terrier" />

        </com.google.android.material.chip.ChipGroup>
    </FrameLayout>

    <TextView
            android:id="@+id/textViewMoreFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_mas_filtros"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar"/>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPets"
            android:layout_width="match_parent"
            android:layout_height="630dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/frameLayoutChips"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
