<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.DetailFragment"
        android:id="@+id/frameLayout2">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/parentLayout">


        <ImageView
                android:layout_width="375dp"
                android:layout_height="400dp"
                android:src="@drawable/image_publication"
                android:id="@+id/image_detail_pet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintHorizontal_bias="0.555" />

        <ImageView
            android:src="@drawable/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_arrow_detail"
            app:layout_constraintStart_toStartOf="@+id/image_detail_pet"
            app:layout_constraintTop_toTopOf="@+id/image_detail_pet"
            android:layout_marginTop="131dp" />

    <ImageView
            android:src="@drawable/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_arrow_detail"
            app:layout_constraintEnd_toEndOf="@+id/image_detail_pet"
            app:layout_constraintTop_toTopOf="@+id/image_detail_pet"
            android:layout_marginTop="131dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="375dp"
            android:layout_height="432dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="328dp"
            android:background="@color/white"
            app:layout_constraintHorizontal_bias="0.555">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="325dp"
                android:layout_height="52dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="44dp"
                android:id="@+id/linearLayout"
                app:layout_constraintHorizontal_bias="0.68">

            <TextView
                    android:text="Nombre"
                    android:layout_width="101dp"
                    android:layout_height="37dp"
                    android:id="@+id/name_pet_detail"
                    android:textColor="@color/Welcome_title"
                    android:textSize="24sp"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                    android:text="Edad"
                    android:layout_width="63dp"
                    android:layout_height="28dp"
                    android:id="@+id/age_detail_pet"
                    android:baselineAligned="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="24dp"
                    android:textColor="@color/Welcome_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:text="Buenos Aires"
                android:layout_width="98dp"
                android:layout_height="21dp"
                android:id="@+id/city_pet_detail"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="42dp"
                android:fontFamily="@font/poppins"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:textColor="@color/Welcome_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.019"
                tools:ignore="MissingConstraints" />

        <ImageView
                android:src="@drawable/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView8"
                app:layout_constraintEnd_toStartOf="@+id/city_pet_detail"
                app:layout_constraintTop_toTopOf="@+id/city_pet_detail"
                android:layout_marginEnd="4dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="325dp"
                android:layout_height="66dp"
                android:id="@+id/constraintLayout"
                tools:layout_editor_absoluteX="26dp"
                app:layout_constraintTop_toBottomOf="@+id/city_pet_detail"
                tools:ignore="MissingConstraints">

            <FrameLayout
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="66dp"
                    android:id="@+id/frameLayout3"
                    android:visibility="visible"
                    tools:ignore="MissingConstraints">

            </FrameLayout>

            <TextView
                    android:id="@+id/weight_pet_detail"
                    android:text="2kg"
                    android:layout_width="30dp"
                    android:layout_height="16dp"
                    tools:layout_editor_absoluteY="14dp"
                    android:textColor="@color/pet_adopt_color"
                    android:textSize="12dp"
                    app:layout_constraintEnd_toEndOf="@+id/frameLayout3"
                    app:layout_constraintStart_toStartOf="@+id/frameLayout3"
                    android:fontFamily="@font/poppins"
                    tools:ignore="MissingConstraints" />

            <TextView
                    android:id="@+id/gender_pet_detail"
                    android:text="Male"
                    android:layout_width="30dp"
                    android:layout_height="16dp"
                    tools:layout_editor_absoluteY="14dp"
                    tools:layout_editor_absoluteX="18dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/pet_adopt_color"
                    android:textSize="12dp"
                    tools:ignore="MissingConstraints" />


            <TextView
                    app:layout_constraintTop_toBottomOf="@+id/male_pet_detail"
                    android:layout_width="17dp"
                    android:layout_height="12dp"
                    android:id="@+id/sex_pet_detail"
                    android:text="Sex"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="22dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="10dp"
                    android:fontFamily="@font/poppins" />

            <TextView
                    android:layout_width="17dp"
                    android:layout_height="12dp"
                    android:id="@+id/sex_pet_detail4"
                    android:text="@string/weight"
                    android:textSize="10dp"
                    android:fontFamily="@font/poppins"
                    tools:layout_editor_absoluteY="41dp"
                    app:layout_constraintEnd_toEndOf="@+id/frameLayout3"
                    app:layout_constraintStart_toStartOf="@+id/frameLayout3"
                    tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.Group
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

            <FrameLayout
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:ignore="MissingConstraints">

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
                android:text="Button"
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:id="@+id/call_button_detail"
                app:cornerRadius="5dp"
                android:backgroundTint="@color/white"
                tools:layout_editor_absoluteX="25dp"
                android:onClick="call"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                android:layout_marginTop="16dp"
                tools:ignore="MissingConstraints" />

        <ImageView
                android:id="@+id/profile_image_detail"
                android:src="@drawable/profile_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="@+id/call_button_detail"
                app:layout_constraintTop_toTopOf="@+id/call_button_detail" />

        <TextView
                android:text="@string/pet_owner"
                android:layout_width="33dp"
                android:layout_height="12dp"
                android:id="@+id/textView21"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/profile_image_detail"
                android:layout_marginStart="28dp"
                android:fontFamily="@font/poppins"
                android:textColorHighlight="@color/pet_adopt_color"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
                android:text="Nombre del dueño"
                android:layout_width="134dp"
                android:layout_height="17dp"
                android:textSize="14sp"
                android:id="@+id/name_petOwner_detail"
                app:layout_constraintStart_toEndOf="@+id/profile_image_detail"
                android:layout_marginStart="28dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:layout_constraintBottom_toBottomOf="@+id/call_button_detail"
                android:fontFamily="@font/poppins"
                android:textColorHighlight="@color/pet_adopt_color" />

        <ImageView
                android:src="@drawable/cellphone_call_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView10"
                app:layout_constraintBottom_toBottomOf="@+id/call_button_detail"
                app:layout_constraintVertical_bias="0.533"
                app:layout_constraintTop_toTopOf="@+id/call_button_detail"
                app:layout_constraintEnd_toEndOf="@+id/call_button_detail" />

        <TextView
                android:text=""
                android:layout_width="325dp"
                android:layout_height="84dp"
                android:id="@+id/description_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/call_button_detail"
                android:layout_marginTop="8dp" />

        <Button
                android:text="@string/adopt"
                android:layout_width="326dp"
                android:layout_height="60dp"
                android:id="@+id/adopt_button"
                app:cornerRadius="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/pet_adopt_color"
                android:fontFamily="@font/poppins"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="80dp"
                app:layout_constraintTop_toBottomOf="@+id/call_button_detail"
                app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>





